# GenshinLauncher

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: logger.rs  main.rs
src-tauri/src/unlock_fps/: unlock_fps.cpp  unlock_fps.h
src/components/: banner.vue  post.vue  run.vue
src/components/pages/: setting.vue
src/css/: style.css
src/font/MiSans/: font.min.css
src/font/font-awesome/: all.min.css
src/font/iconfont/: iconfont.css
src/scripts/: data.ts  main.ts
