[package]
name = "genshinlauncher"
version = "0.1.0"
description = "原神启动器。"
authors = ["btjawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
cc = "1.0.83"

[dependencies]
tauri = { version = "1.5", features = [ "http-request", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["everything"] }
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4.33"
log4rs = "1.2.0"
log = "0.4.20"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
